# Simple2048Game

./: CMakeLists.txt  README.md
inc/: ColumnIterator.hpp  Controller.hpp  Game.hpp  GameTable.hpp
src/: ColumnIterator.cpp  Controller.cpp  Game.cpp  GameTable.cpp  main.cpp
